--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <h1>My First Heading</h1>
 
+<p>HTML images are defined with the img tag:</p>
+
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+
 <p>My first paragraph.</p>
 
 </body>
